force-app/main/default/objects/RSW_Manodhaara_CMT__mdt/RSW_Manodhaara_CMT__mdt.object-meta.xml
<CustomObject>
    <label>Manodhaara CMT</label>
    <pluralLabel>Manodhaara CMT</pluralLabel>
</CustomObject>