force-app/main/default/objects/RSW_Manodhaara_CMT__mdt/fields/RSW_Day_End_Time__c.field-meta.xml
<CustomField>
    <fullName>RSW_Day_End_Time__c</fullName>
    <label>Day End Time</label>
    <length>18</length>
    <type>Text</type>
</CustomField>