force-app/main/default/objects/RSW_Manodhaara_CMT__mdt/fields/RSW_End_Time__c.field-meta.xml
<CustomField>
    <fullName>RSW_End_Time__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>