force-app/main/default/objects/RSW_Manodhaara_CMT__mdt/fields/RSW_Manodhaara_App_Info__c.field-meta.xml
<CustomField>
    <fullName>RSW_Manodhaara_App_Info__c</fullName>
    <label>Manodhaara App Info</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>