force-app/main/default/objects/RSW_Manodhaara_CMT__mdt/fields/RSW_Start_Day_Time__c.field-meta.xml
<CustomField>
    <fullName>RSW_Start_Day_Time__c</fullName>
    <label>Start Day Time</label>
    <length>18</length>
    <type>Text</type>
</CustomField>