force-app/main/default/objects/RSW_Manodhaara_CMT__mdt/fields/RSW_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>RSW_Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>