force-app/main/default/objects/RSW_Manodhaara_CMT__mdt/fields/RSW_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>RSW_Time_Slot__c</fullName>
    <label>Time Slot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10:00 AM-11:00 AM</fullName>
                <default>true</default>
                <label>10:00 AM-11:00 AM</label>
            </value>
            <value>
                <fullName>10:30 AM-11:30 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM-12:00 PM</fullName>
            </value>
            <value>
                <fullName>11:30 AM-12:30 PM</fullName>
            </value>
            <value>
                <fullName>12:00 PM-01:00 PM</fullName>
            </value>
            <value>
                <fullName>12:30 PM-01:30 PM</fullName>
            </value>
            <value>
                <fullName>01:00 PM-02:00 PM</fullName>
            </value>
            <value>
                <fullName>01:30 PM-02:30 PM</fullName>
            </value>
            <value>
                <fullName>02:00 PM-03:00 PM</fullName>
            </value>
            <value>
                <fullName>02:30 PM-03:30 PM</fullName>
            </value>
            <value>
                <fullName>03:00 PM-04:00 PM</fullName>
            </value>
            <value>
                <fullName>03:30 PM-04:30 PM</fullName>
            </value>
            <value>
                <fullName>04:00 PM-05:00 PM</fullName>
            </value>
            <value>
                <fullName>04:30 PM-05:30 PM</fullName>
            </value>
            <value>
                <fullName>05:00 PM-06:00 PM</fullName>
            </value>
            <value>
                <fullName>05:30 PM-06:30 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>